[project]
name = "nytimes_rss"
version = "0.1.0"
authors = [
    {name = "Fenner Macrae", email = "fmacrae.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "Django ~= 4.1",
    "feedparser ~= 6.0",
    "djangorestframework ~= 3.1",
    "django-vite ~= 2.0",
    "django-pymemcache ~= 1.0"
]

[build-system]
requires = ["setuptools ~= 67.0", "cython ~= 0.29"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black >= 23.1, < 24",
    "django-stubs >= 1.2, < 2",
    "djangorestframework-types >= 0.8, < 1",
    "flake8 >= 2.0, < 3",
    "isort >= 5.12, < 6",
    "mypy >= 1.1, < 2",
    "pytest >= 7.2, < 8",
    "pytest-cov >= 4.0, < 5",
    "pytest-mock >= 3.10, < 4",
    "pytest-runner >= 6.0, < 7",
    "types-setuptools >= 67, < 68",
]

[tool.setuptools]
packages = ["nytimes_rss"]

[tool.black]
line-length = 100

[tool.pylint.FORMAT]
output-format = "colorized"
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "logging-fstring-interpolation"
]

[tool.pylint.basic]
# Allow shorter and longer variable names than the default.
argument-rgx = "[a-z_][a-z0-9_]*$"
attr-rgx = "[a-z_][a-z0-9_]*$"
variable-rgx = "[a-z_][a-z0-9_]*$"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
files = ["nytimes_rss", "tests"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true

[[tool.mypy.overrides]]
module = [
    "feedparser.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*"
]
ignore_errors = true